JIRA ID [APSTRATA-1096] layout issues

--- a/apstrataDojoSDK/demos/survey/widgets/css/survey.css
+++ b/apstrataDojoSDK/demos/survey/widgets/css/survey.css
@@ -311,3 +311,18 @@
 .submissionsCount {
 	font-size: 14px !important;
 }
+
+.searchBox input{
+	font-family: sans-serif;
+	font-size: 0.9em;
+
+	padding: 4px;
+	width: 250px;
+	
+	border: solid 1px #ababab;
+
+    -o-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
